--- a/main.css
+++ b/main.css
@@ -1,9 +1,30 @@
-body {
-	font-size: 0.8em;
-	font-family: arial, sans-serif;
-    color:cyan;
+.page-navigation {
+ background-color: #29297A;
+    color: #FF0000;
+    height: 50px;
 }
 
-strong{ 
-    color:blue;
+
+.page-navigation ul { 
+    list-style: none;
 }
+
+.page-navigation ul li { 
+    padding: 0 15px;
+    float:left;
+    line-height: 50px;
+}
+.page-navigation ul li a { 
+    color: #FF66CC;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.page-navigation ul li a:hover {
+	color: #CC99FF;
+    text-decoration: none;
+
+}
+
+
