--- a/css/week3.css
+++ b/css/week3.css
@@ -1,15 +1,19 @@
-h1 { color: #00FF00;
+h1 { 
+    color: #00FF00;
     text-decoration: underline;
 }
 
-p { padding: 20px;
+p { 
+    padding: 20px;
     color: #3366FF;
 }
-a{ color: #FF0000;
+a{ 
+    color: #FF0000;
     text-decoration: underline;
 }
 
-a:hover { color: #FFFF00;
+a:hover { 
+    color: #FFFF00;
     text-decoration: none;
 }
 
