--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,21 @@
 
-body {
-	background-color: #cadde5;
-    padding: 40px;
-    
+.container {
+    width: 740px;
+    margin: auto;
 }
 
-h1 {
-	color: #2980b9;
-    font-size: 40px;
+.main-header {
+	height: 110px;
+    color: #FFF;
+    background: royalblue
 }
 
-h3 { 
-    color: #e74c3c;
-    
-}
+
+
+
+
+
+
+
+
 
