--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,23 @@
     background: royalblue
 }
 
+.main-container{
+	padding: 20px;
+	background:lightgrey;
+}
 
+.main-footer{
+	heignt: 100px;
+	color: #FFF;
+	background: #222;
+}
 
-
-
-
+.base {
+	padding-top: 20px;
+	color: #FFF;
+	text-align: center;
+	font-size: 24px;
+}
 
 
 
