--- a/css/main.css
+++ b/css/main.css
@@ -41,10 +41,25 @@
     text-decoration: none;
 }
 
+.main-header {
+    height: 110px;
+    color: #FFF;
+    background: royalblue;
+}
+
+.main-footer {
+    heignt: 100px;
+    color: #FFF;
+    background: #FF0000;
+}
 
 
-
-
+.base {
+    padding-top: 20px;
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+}
 
 
 
