--- a/Assignments/#2/main.css
+++ b/Assignments/#2/main.css
@@ -1,7 +1,107 @@
+.container{
+    width: 1150px;
+    margin: auto;
+}
+
+
+
+#tfheader{
+    background-color:#c3dfef;
+  }
+  #tfnewsearch{
+    float:right;
+    padding:20px;
+  }
+  .tftextinput{
+    margin: 0;
+    padding: 5px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:14px;
+    border:1px solid #0076a3; border-right:0px;
+    border-top-left-radius: 5px 5px;
+    border-bottom-left-radius: 5px 5px;
+  }
+  .tfbutton {
+    margin: 0;
+    padding: 5px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:14px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    border: solid 1px #0076a3; border-right:0px;
+    background: #0095cd;
+    background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+    background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+    border-top-right-radius: 5px 5px;
+    border-bottom-right-radius: 5px 5px;
+  }
+  .tfbutton:hover {
+    text-decoration: none;
+    background: #007ead;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+  }
+  /* Fixes submit button height problem in Firefox */
+  .tfbutton::-moz-focus-inner {
+    border: 0;
+  }
+  .tfclear{
+    clear:both;
+  }
+
+
+
+
+
+
+.main-header img{
+  position: absolute;
+  top: 30px;
+  left: 150px;
+}
+
+.main-header h2{
+  position: absolute;
+  left: 50px;
+  width: 120px;
+  
+}
+
+.main-box{
+  width: 100%;
+  height: 800px;
+  background-color: #fff;
+  color: #fff;
+  border-radius: 15px;
+  position: relative;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 5px;
+}
+
+.main-content{
+  padding: 20px;
+ width: 100%;
+}
+
+.main-content div{
+  margin-left: 70px;
+}
+
+.main-content h1{
+  color: #FF6600;
+  position: relative;
+  left: -50px;
+}
+
 .navigation {
- background-color: #29297A;
+ background-color: #00A6A6;
     color: #FF0000;
     height: 50px;
+    width: 1100px;
 }
 
 
@@ -15,14 +115,14 @@
     line-height: 50px;
 }
 .navigation ul li a { 
-    color: #FF66CC;
+    color: #000;
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
 }
 
 .navigation ul li a:hover {
-	color: #CC99FF;
+    color: #FF6600;
     text-decoration: none;
 
 }
@@ -31,24 +131,109 @@
 }
 
 .main-header {
-    height: 110px;
+    height: 100px;
     color: #FFF;
-    background: royalblue;
-}
-
-.main-footer {
-    heignt: 100px;
-    color: #FFF;
-    background: #FF0000;
-}
-
-.main-footer ul{
     
 }
 
-.base {
-    padding-top: 20px;
+.main-footer {
+    height: 100px;
     color: #FFF;
     text-align: center;
-    font-size: 24px;
+}
+.main-footer ul li{
+    padding: 0 15px;
+    padding-left: 10 20px;
+    float:left;
+    line-height: 50px;
+}
+
+.main-footer ul li a{ 
+    color: #FF66CC;
+    text-decoration: none;
+
+}
+
+.box {
+  width: 180px;
+  height: 280px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 15px;
+  position: relative;
+  left: -100px;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 5px;
+  float: left;
+}
+
+.box-1{
+  background-color: #FFF;
+  text-decoration: bold;
+
+}
+
+.box.box-1 p{
+  color: #00A6A6;
+  font-size: 14px;
+}
+
+.box-2{
+  background-color: #00A6A6;
+}
+
+.box-3{
+  background-color: #00A6A6;
+}
+
+.box-3 img{
+  left: 20px;
+}
+
+.box-4{
+  background-color: #00A6A6;
+}
+
+.box-5{
+  background-color: #00A6A6;
+}
+
+.box-6{
+  background-color: #00A6A6;
+}
+
+.box-8{
+  background-color: #FFF;
+}
+
+.box-8 h4{
+  color: #000;
+  margin-right: 5px;
+}
+
+.box-8 p{
+  color: #000;
+}
+
+.box-7{
+  background-color: #00A6A6;
+}
+
+.box img {
+  position: absolute;
+  top: 10px;
+}
+
+.box h4{
+  margin-top: 120px;
+  margin-left: 6px;
+}
+
+.box p {
+  font-size: 12px;
+}
+
+.box h4 {
+  margin-bottom: 10px;
 }
