--- a/Assignments/#2/main.css
+++ b/Assignments/#2/main.css
@@ -3,10 +3,9 @@
     margin: auto;
 }
 
-
-
 #tfheader{
     background-color:#c3dfef;
+    position: relative;
   }
   #tfnewsearch{
     float:right;
@@ -53,19 +52,20 @@
   }
 
 
-
+.main-header {
+  position: relative;
+}
 
 
 
 .main-header img{
   position: absolute;
-  top: 30px;
-  left: 150px;
+  top: 25px;
+  left: 100px;
 }
 
 .main-header h2{
   position: absolute;
-  left: 50px;
   width: 120px;
   
 }
@@ -208,12 +208,12 @@
 }
 
 .box-8 h4{
-  color: #000;
+  color: #00A6A6;
   margin-right: 5px;
 }
 
 .box-8 p{
-  color: #000;
+  color: #00A6A6;
 }
 
 .box-7{
